add paste button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,15 @@
 <resources>
     <string name="app_name">Translate You</string>
 
+    <!-- Dialog -->
     <string name="okay">Okay</string>
     <string name="cancel">Cancel</string>
 
+    <!-- Text -->
     <string name="enter_text">Enter text</string>
+    <string name="paste">Paste</string>
+
+    <!-- Options -->
     <string name="instance">Instance</string>
     <string name="options">Options</string>
 </resources>
