add api key option

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
 
     <!-- Options -->
     <string name="instance">Instance</string>
+    <string name="api_key">Api Key</string>
     <string name="options">Options</string>
 </resources>
