--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Translate You</string>
+    <string name="libre_translate">LibreTranslate</string>
 
     <!-- Dialog -->
     <string name="okay">Okay</string>
