--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <!-- Options -->
     <string name="instance">Instance</string>
     <string name="api_key">Api Key</string>
-    <string name="options">Options</string>
+    <string name="options">Settings</string>
     <string name="about">About</string>
 
     <!-- About -->
