--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="instance">Instance</string>
     <string name="api_key">Api Key</string>
     <string name="options">Settings</string>
+    <string name="history">History</string>
     <string name="about">About</string>
 
     <!-- About -->
