--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
 
     <!-- History -->
     <string name="clear_history">Clear history</string>
+
+    <!-- Exception -->
+    <string name="server_error">Error in communicating with the server. Please choose another instance in the settings!</string>
 </resources>
