--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -18,7 +18,7 @@
     <string name="history">Historique</string>
     <string name="about">À propos</string>
     <string name="history_enabled">Activer l\'historique</string>
-+    <string name="fetch_delay">Retard de traduction</string>
+    <string name="fetch_delay">Retard de traduction</string>
 
     <!-- About -->
     <string name="github" translatable="false">GitHub</string>
