indicate whether an API key is needed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="fetch_delay">Translation delay</string>
     <string name="fetch_delay_summary">The delay between inserting text and fetching the translation</string>
     <string name="history_summary">Keep track of the last translated texts</string>
+    <string name="required">Required</string>
+    <string name="optional">Optional</string>
 
     <!-- About -->
     <string name="github" translatable="false">GitHub</string>
