Limit the history text length to 3 lines and show a dialog with the full translation on click (closes #48)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
 
     <!-- History -->
     <string name="clear_history">Clear history</string>
+    <string name="open">Open</string>
 
     <!-- Exception -->
     <string name="server_error">Error in communicating with the server. Please choose another instance in the settings!</string>
