--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -9,6 +9,8 @@
     <string name="paste">Coller</string>
     <string name="copy">Copier</string>
     <string name="auto">Auto</string>
+    <string name="forget">Oublier</string>
+    <string name="language_not_supported">Langue non pris en charge!</string>
     <!-- Settings -->
     <string name="instance">Instance</string>
     <string name="api_key">Clé de l\'API</string>
@@ -21,6 +23,14 @@
     <string name="history_summary">Gardez une trace des derniers textes traduits</string>
     <string name="required">Obligatoire</string>
     <string name="optional">Optionnel</string>
+    <string name="compact_history">historique compact</string>
+    <string name="compact_history_summary">N\'affiche par défaut que les 3 premières lignes de texte dans l\'historique</string>
+    <string name="simultaneous_translation">Traduction simultanée</string>
+    <string name="simultaneous_translation_summary">Récupérer les résultats de plusieurs moteurs de traduction simultanément.</string>
+    <string name="enabled_engines">Moteurs activés</string>
+    <string name="enabled_engines_summary">Moteurs à utiliser pour la traduction simultanée.</string>
+    <string name="additional_info">Informations complémentaires</string>
+    <string name="additional_info_summary">Afficher des données supplémentaires sur la traduction si elles sont disponibles.</string>
     <!-- About -->
     <string name="github" translatable="false">GitHub</string>
     <string name="author">Auteur</string>
@@ -32,11 +42,7 @@
     <string name="theme_dark">Obscur</string>
     <!-- History -->
     <string name="clear_history">Nettoyer l\'historique</string>
+    <string name="open">Ouvrir</string>
     <!-- Exception -->
     <string name="server_error">Erreur lors de la communication avec le serveur. Veuillez sélectionner une autre instance dans les paramètres !</string>
-    <string name="language_not_supported">La langue n\'est pas prise en charge !</string>
-    <string name="compact_history">Historique compact</string>
-    <string name="open">Ouvrir</string>
-    <string name="forget">Oublier</string>
-    <string name="compact_history_summary">N\'affiche par défaut que les 3 premières lignes de texte dans l\'historique</string>
 </resources>
