--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,9 @@
     <string name="selected_engine">Selected engine</string>
     <string name="st_selected_engine">Engine that SimplyTranslate uses for translating</string>
     <string name="translation">Translation</string>
+    <string name="general">General</string>
+    <string name="app_language">App language</string>
+    <string name="system">System</string>
     <!-- About -->
     <string name="github" translatable="false">GitHub</string>
     <string name="author">Author</string>
