Option to set a custom accent color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,8 @@
     <string name="theme_auto">System</string>
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
+    <string name="accent_color">Accent color</string>
+    <string name="dynamic_colors">Dynamic colors</string>
     <!-- History -->
     <string name="clear_history">Clear history</string>
     <string name="open">Open</string>
