refactor: add more info about tess (see #280)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <!-- Tesseract -->
     <string name="image_translation">Translation from Image</string>
     <string name="image_translation_summary">Download and apply languages for text recognition from images.</string>
+    <string name="tess_summary">Tesseract is an optical character recognition engine. It is free software, released under the Apache License. It was released as open source in 2005 and development has been sponsored by Google since 2006. Tesseract is considered one of the most accurate open-source OCR engines available. For more information, see %1$s.</string>
     <string name="init_tess_first">Please download language data in the settings first.</string>
     <string name="select_language">Please select a language for the text recognition of images in the settings.</string>
     <string name="select_theme">Select Theme</string>
