feat: pop-up window when translating selection with app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="copy">Copy</string>
     <string name="auto">Auto</string>
     <string name="forget">Forget</string>
+    <string name="clear">Clear</string>
     <string name="translate">Translate</string>
     <string name="language_not_supported">Language is not supported!</string>
     <string name="translate_to">Translate to</string>
