feat: image cropping tool for OCR (closes #465)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,5 @@
     <string name="init_tess_first">Please download language data in the settings first.</string>
     <string name="select_language">Please select a language for the text recognition of images in the settings.</string>
     <string name="select_theme">Select Theme</string>
+    <string name="invalid_selection_area">Invalid selection area!</string>
 </resources>
