--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="language_not_supported">Language is not supported!</string>
     <string name="translate_to">Translate to</string>
     <string name="translate_from">Translate from</string>
+    <string name="translation_error_hint">The selected translation engine doesn\'t seem to work. Please select a different one in the settings.</string>
     <!-- Settings -->
     <string name="instance">Instance</string>
     <string name="api_key">API key</string>
