feat: display error message when engine doesn't support a language

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="translate_to">Translate to</string>
     <string name="translate_from">Translate from</string>
     <string name="translation_error_hint">The selected translation engine doesn\'t seem to work. Please select a different one in the settings.</string>
+    <string name="unsupported_language">Engine doesn\'t support language %1$s</string>
     <!-- Settings -->
     <string name="instance">Instance</string>
     <string name="api_key">API key</string>
